--- a/taverna-download-impl/pom.xml
+++ b/taverna-download-impl/pom.xml
@@ -36,13 +36,13 @@
 			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>com.springsource.org.apache.commons.io</artifactId>
 			<version>${commons.io.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>com.springsource.org.apache.commons.codec</artifactId>
 			<version>${commons.codec.version}</version>
 		</dependency>
 	</dependencies>
